Fix deprecation warnings. Fine.